# ossipee

./: .gitignore  README  README.md  README.rst  TODO.rst  cleanup  create  depend.py  display  display.py  float_ip  maketags.sh  ossipee-create  ossipee-display  ossipee-host  ossipee-inventory.py  ossipee-list  ossipee-redo  ossipee-sections.py  ossipee-teardown  ossipee.py  planning.py  rdo_factory.py  requirements.txt  rhosidm.py  setup.cfg  setup.py  teardown  teardown.py  work.py
ansible/: ipa_server_install.py
osipa/: osipa.py
playbooks/: all.yml  create_hosts.yml  create_network.yml  install_ipa.yml  install_ipa_client.yml  install_ipsilon.yml  install_osp.yml  install_rdo.yml  rhel.yml  teardown_network.yml  uninstall_ipa.yml  unregister_controller.yml
playbooks/templates/: mapping.json  rhel.repo
