[metadata]
name = ossipee
summary = A utility for creating test virtual machine networks
description-file =
    README.rst
author = Adam Young
author-email = ayoung@redhat.com
home-page = http://adam.younglogic.com/
classifier =
    Environment :: OpenStack
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    ossipee
    osipa

scripts =
    ossipee-create
    ossipee-display
    ossipee-host
    ossipee-list
    ossipee-redo
    ossipee-teardown

[pbr]
warnerrors = True

[wheel]
universal = 1
